# game-of-life-sfml

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: cell.hpp  gol.hpp
presets/: gun  hivenudger  hivenudger2
src/: cell.cpp  gol.cpp
